# mtee

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  afl.bat  args.cpp  cpuload.cpp  cpuload.h  cspell.config.yaml  handler.cpp  header.h  help.cpp  helpers.cpp  index.html  main.cpp  mtee.bat  mtee.code-workspace  output.cpp  perr.cpp
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
source/: header.h  helpers.cpp  main.cpp  output.cpp  perr.cpp
tests/: winafl.bat
tests/input/: hello.txt  test.txt
workspace/: mtee.cbp  mtee.sln  mtee.vcxproj  mtee.vcxproj.filters
